# tunnel-manager

./: .coderabbit.yaml  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  postcss.config.js  prettier.config.mjs  tsconfig.json  tsconfig.node.json  vite.config.ts
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: appimage-release.yml  build-appimage.yml  build-dmg.yml  ci.yml  dmg-release.yml  release.yml
scripts/: repo-utils.mjs  sync-repo-urls.mjs  sync-version.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Dashboard.tsx  Settings.tsx  Tunnels.tsx  index.ts
src/components/dashboard/: DashboardActiveTunnelsCard.tsx  DashboardAuthWarningCard.tsx  DashboardControlBar.tsx  DashboardEmptyState.tsx  DashboardHeader.tsx  DashboardTunnelRow.tsx  DashboardWaitingState.tsx
src/config/: repository.ts
src/contexts/: TunnelContext.tsx
src/hooks/: useTunnelForm.ts
src/pages/: DashboardPage.tsx  SettingsPage.tsx  TunnelsPage.tsx
src/types/: component-props.ts  dashboard.ts  index.ts  navigation.ts  pages.ts  settings.ts  tunnel-context.ts  tunnel-form.ts  tunnels.ts
src/utils/: error.ts  tunnel.ts
tests/rust/: lib_tests.rs
tests/ts/: error.test.ts  tunnel.test.ts
(+14 files in other folders)
